@@ -6,6 +6,10 @@ Changelog
 
 - Put themes in a separate zcml file to be able to exclude them
   [laulaz]
+  
+- #14107 bot requests like /widget/oauth_login/info.txt cause finding 
+  correct context with plone.app.theming
+  [anthonygerrard]
 
 
 1.2.0 (2014-03-02)
